fix(border): css fix scrollbar

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -48,7 +48,7 @@ mark:hover {
 }
 
 ::-webkit-scrollbar {
-  width: 1em;
+  width: .5em;
 }
 
 ::-webkit-scrollbar-track {
